--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
-		"fast-xml-parser": "^4.5.1"
+		"fast-xml-parser": "^4.5.1",
+		"lucide-svelte": "^0.469.0"
 	}
 }
