--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/node": "^22.10.2",
+		"@vite-pwa/sveltekit": "^0.6.7",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.23",
 		"eslint": "^9.7.0",
@@ -28,6 +29,7 @@
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
+		"sharp": "^0.33.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.9",
