--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"deploy": "npm run build && powershell scripts/deploy.ps1"
+		"setup": "tsx scripts/setup.ts",
+		"deploy": "npm run build && tsx scripts/deploy.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
@@ -23,6 +24,7 @@
 		"@vite-pwa/sveltekit": "^0.6.7",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.23",
+		"dotenv": "^16.4.7",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -34,6 +36,7 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^3.4.9",
+		"tsx": "^4.19.2",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.11"
