added google auth and google drive integration, todo: syncing settings and progress across devices

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	},
 	"dependencies": {
 		"fast-xml-parser": "^4.5.1",
+		"google-auth-library": "^9.15.0",
 		"lucide-svelte": "^0.469.0"
 	}
 }
