added dockerfile for deployment

--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
-# Configuration file path for the application
-CONFIG_PATH="https://example.com/path/to/config.ts"
+CONFIG_URL=config_url
+ORIGIN=your_origin
 
-# Local deployment path
-DEPLOY_PATH="/path/to/deployment/directory" 
+GOOGLE_CLIENT_ID=google_client_id
+GOOGLE_CLIENT_SECRET=google_client_secret
