add back the setup and deploy scripts

--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
 CONFIG_URL=config_url
-ORIGIN=your_origin
+DEPLOY_BUILD_PATH=path_to_deploy_build_folder
 
+ORIGIN=your_origin
 GOOGLE_CLIENT_ID=google_client_id
 GOOGLE_CLIENT_SECRET=google_client_secret
