--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"setup": "node -e \"require('dotenv').config(); fetch(process.env.CONFIG_URL).then(r => r.text()).then(t => require('fs').writeFileSync('src/lib/config/config.ts', t))\"",
+		"setup": "tsx scripts/setup.ts",
+		"deploy": "npm run build && tsx scripts/deploy.ts",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -20,6 +21,7 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/fs-extra": "^11.0.4",
 		"@types/node": "^22.10.2",
 		"@vite-pwa/sveltekit": "^0.6.7",
 		"autoprefixer": "^10.4.20",
@@ -28,7 +30,9 @@
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"fs-extra": "^11.2.0",
 		"globals": "^15.0.0",
+		"node-fetch": "^3.3.2",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
