--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ static/robots.txt
 
 # Podcast snapshot
 src/lib/stores/podcast/podcast-snapshot-seo.json
+
+# Generated Stuff
+static/.well-known/assetlinks.json
+android-twa
+static/screenshots/**
+static/pwa/**
+
