--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"setup": "vite-node src/scripts/setup.ts",
+		"setup": "npx tsx src/scripts/setup.ts",
 		"deploy": "npm run build && vite-node src/scripts/deploy.ts",
 		"dev": "vite dev",
 		"seo": "vite-node src/scripts/generate-og-image.ts && vite-node src/scripts/generate-sitemap.ts && vite-node src/scripts/generate-podcast-snapshot.ts",
