--- a/example.env
+++ b/example.env
@@ -1,6 +1,18 @@
 CONFIG_URL=config_url
 DEPLOY_BUILD_PATH=path_to_deploy_build_folder
 
-ORIGIN=your_origin
+ORIGIN=https://example.com
 GOOGLE_CLIENT_ID=google_client_id
 GOOGLE_CLIENT_SECRET=google_client_secret
+
+ASSETLINKS_PACKAGE_NAME=com.example.app
+KEYSTORE_PATH=path_to_your_keystore
+KEYSTORE_ALIAS=app_alias
+BUBBLEWRAP_KEYSTORE_PASSWORD=keystore_password
+BUBBLEWRAP_KEY_PASSWORD=keystore_key_password
+
+TWA_DIRECTORY=android-twa
+TWA_MANIFEST_URL=https://example.com/manifest.json
+SPLASH_SCREEN_COLOR=FFFFFF
+ICON_PADDING_RATIO=0.1
+
